x11window: do resize increment calculations in native X coordinates

This should prevent rounding errors from happening

BUG: 466454